@@ -362,6 +362,8 @@ CONFIG_DEV_NULL=y
 # CONFIG_VIDEO_DEVICES is not set
 # CONFIG_BCH is not set
 CONFIG_INPUT=y
+CONFIG_MOUSE=y
+# CONFIG_MOUSE_WHEEL is not set
 # CONFIG_INPUT_TSC2007 is not set
 # CONFIG_INPUT_ADS7843E is not set
 # CONFIG_INPUT_STMPE811 is not set
