@@ -662,6 +662,9 @@ struct usbhid_mousereport_s
   uint8_t xdisp;     /* X displacement */
   uint8_t ydisp;     /* y displacement */
                      /* Device specific additional bytes may follow */
+#ifdef CONFIG_MOUSE_WHEEL
+  uint8_t wdisp;     /* Wheel displacement */
+#endif
 };
 
 /* Joystick input report (1 bytes) (HID D.1) */
